--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>mySpotify</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href=" https://bootswatch.com/cyborg/bootstrap.min.css ">
     <link rel="stylesheet" href="styles.css">
 
     <!-- 1. Load libraries -->
@@ -24,6 +25,7 @@
 
 <!-- 3. Display the application -->
 <body>
+    <base href="/">
     <my-app>Cargando...</my-app>
 </body>
 </html>
